work(form): Скорректировано создание формы с полями
