# docs/swagger.json
@@ -94,7 +94,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.okCreate"
+                            "$ref": "#/definitions/dto.FormResponse"
                         }
                     },
                     "400": {
@@ -169,11 +169,23 @@
         }
     },
     "definitions": {
-        "controller.okCreate": {
+        "dto.CreateFieldRequest": {
             "type": "object",
             "properties": {
-                "id": {
+                "active": {
+                    "type": "boolean"
+                },
+                "code": {
                     "type": "string"
+                },
+                "form_id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -182,6 +194,12 @@
             "properties": {
                 "active": {
                     "type": "boolean"
+                },
+                "fields": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.CreateFieldRequest"
+                    }
                 },
                 "name": {
                     "type": "string"
